--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_CONNECT = 'mongodb+srv://ismail:ismail@cluster0.7wsfb.mongodb.net/test'
+DB_CONNECT = mongodb+srv://ismail:ismail@cluster0.zqrqk.mongodb.net/test
 TOKEN_SECRET = clqnvqlvbqldjdbv
