[ismail : add env ]

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_CONNECT = mongodb+srv://ismail:ismail@cluster0.zqrqk.mongodb.net/test
+DB_CONNECT = mongodb+srv://ismail:ismail@cluster0.y1lfu.mongodb.net/test
 TOKEN_SECRET = clqnvqlvbqldjdbv
