--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DB_CONNECT = mongodb+srv://ismail:ismail@cluster0.y1lfu.mongodb.net/test
+DB_CONNECT = mongodb+srv://ismail:ismail@cluster0.bxfkx.mongodb.net/test
+
 TOKEN_SECRET = clqnvqlvbqldjdbv
