--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_CONNECT = mongodb+srv://ismail:ismail@cluster0.bxfkx.mongodb.net/test
+DB_CONNECT = mongodb+srv://kaoutar:123456789kaoutar@cluster0.yjrl3.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
 TOKEN_SECRET = clqnvqlvbqldjdbv
